category name spacing, few other small bugs, nav fixes

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -25,6 +25,8 @@
   width: 96px;
   height: 96px;
 }*/
+
+
 .cardName{
   /*font-family: 'Alegreya', serif;*/
   /*color:white;*/
@@ -822,7 +824,7 @@ padding: 0;
 /*color:#bbbdbb;#8DEEEE color:#BADA55; color:#0ff1ce; color:#20c2ff;*/
 .mesh{
   background-color: #ecf0f1;
-  opacity: .9;
+  /*opacity: .9;*/
   /*-webkit-animation: show 1.2s 1;*/
   /*background-image: url("../images/outsideMesh.png");*/
   /*background-size: cover;*/
@@ -1496,8 +1498,6 @@ html {
 
 
 
-
-
   #eventList{
   margin: auto;
   /*margin-top: 0;*/
@@ -1505,7 +1505,7 @@ html {
   bottom: 0%;
   padding-left: 0px;
   padding-right: 0px;
-  background-color: white;
+  background-color: black;
   /*padding-bottom: 150px;*/
 /*  padding-top: 15px;*/
   /*height: 568px;*/
@@ -1521,6 +1521,141 @@ html {
   /*position: absolute;*/
 
 }
+.shopCat{
+    border-top:1px solid lightgray;
+  /*z-index: 999;*/
+  /*padding-top: 4%;*/
+  /*height:160px;*/
+  width:50%;
+  /*padding-bottom: 1%;*/
+  /*border-radius: 8%;*/
+  /*border-bottom: 1px solid lightgray;*/
+  /*background-color: white;*/
+
+  /*margin: 10%;*/
+  /*width: 100%;*/
+  /*height:30%;*/
+  /*font-size: 15px;*/
+   /*background-color: lightgray;*/
+   /*text-align: center;*/
+  /*font-family: 'Gafata', sans-serif;*/
+  /*color:lightgray;*/
+  /*margin: auto;*/
+  /*background-color: blue!important;*/
+/*  width: 50%;
+  height:160px;*/
+  /*height:40%;*/
+  opacity: 1;
+  background-color: white;
+  float: left;
+  text-align: center;
+   border-left: 1px solid lightgray;
+    /*margin: auto!important;*/
+    /*padding:6%!important;*/
+    /*padding-top: 4%!important;*/
+    height: 175px!important;
+
+   /*margin-bottom: 5%!important;*/
+   /*padding-top: 5%;*/
+   /*padding-bottom: 0;*/
+  /*z-index: 999!important;*/
+  /*margin-bottom: 5%;*/
+  /*border:none!important;*/
+
+    /*text-align: center;*/
+    /*padding-top: 5%;*/
+  /*display: inline-block;*/
+}
+
+.item{
+    border:none;
+}
+
+.shopCat:active{
+  /*background-color: gray;*/
+/*  opacity: .7;*/
+  -webkit-transition: opacity linear 200ms;
+  /*-webkit-animation: fadeInto 5s linear;*/
+        -webkit-transition-delay: .25s; /* Safari */
+    transition-delay: .25s;
+      opacity: .8;
+      /*background-color: lightgray;*/
+}
+
+
+
+.shopCatImg{
+    width: 50%;
+    max-height:105px;
+    margin: auto!important;
+    margin-top: 20px!important;
+    /*padding-bottsom: 0!important;*/
+    /*max-height: 60px;*/
+      /*padding:5%!important;*/
+  /*height:160px;*/
+  /*margin-bottom: 0%;*/
+  /*width: 50%;*/
+  /*margin-top: 1%;*/
+    /*padding-top: 3%!important;*/
+  /*height:105px;*/
+  /*padding: 30%;*/
+  /*border:none!important;*/
+  /*float:left;*/
+  /*margin-top: 3%;*/
+  /*display: inline!important;*/
+}
+.shopCatName{
+   /*border-left: 1px solid lightgray;*/
+       margin: auto;
+  /*position: absolute;*/
+  /*top:10%;*/
+  /*width: 50%;*/
+  /*height:115px;*/
+  /*float:left;*/
+  font-size: 14px;
+  color:lightgray;
+  background-color: transparent!important;
+  /*padding-top:2px!important;*/
+  /*margin-top: 1px!important;*/
+  padding-top: 1px!important;
+  padding-bottom: 1px!important;
+  bottom:-15px!important;
+  /*top:-15px!important;*/
+        /*border-right: 3px solid lightgray;*/
+  /*margin-top: 3%;*/
+  /*display: inline!important;*/
+}
+
+  #shopListBack{
+ /*margin: 5%;*/
+  /*margin-top: 0;*/
+  margin-top: 19.5%;
+  margin-bottom: 14%;
+  /*bottom: 0%;*/
+  background-color: #141414;
+  /*padding-bottom: 150px;*/
+/*  padding-top: 15px;*/
+  /*height: 568px;*/
+  /*height: 480px;*/
+  /*iphone 4 change*/
+  /*height: 100%;*/
+  /*width: 100%;*/
+      bottom: 0%;
+  /*padding-left: 0px;*/
+  /*padding: 5%;*/
+  width: 100%;
+  /*text-align: center;*/
+  /*text-align: center;*/
+  /*padding-top: 25%;*/
+  /*overflow: auto;*/
+  /*overflow-scrolling: auto;*/
+  /*-webkit-overflow-scrolling: touch;*/
+/*  z-index: 2;*/
+  /*position: absolute;*/
+
+}
+
+
 .addAnEvent{
   height: 568px;
 }
@@ -1641,9 +1776,6 @@ html {
 
 }
 
-/*#eventList #eventWrapper:last-child {
-  padding-bottom: 8%;
-}*/
 
 
 .wholeEventsPage .item-body{
@@ -1664,25 +1796,6 @@ html {
 
 /*.ng-binding{
   vertical-align: center;
-}*/
-
-/*#eventListingInfo {
-  opacity:.9 !important;
-  z-index: 5 !important;
-}*/
-
-/*single event listing
-/*#eventListWrapper{
-  position: relative;
-  background-color: blue;
-/*  background: #fff;*/
-/*  padding-left: 7%;*/
-/*}*/
-
-
-/*#eventListImg{
-  max-height: 200px;
-  max-width: 200px;
 }*/
 
 
